# maze_solver

./: CMakeLists.txt  README.md  build_all_with_cmake.sh  build_all_without_cmake.sh
examples/: maze-task-first-results.txt  maze-task-second-results.txt
include/: uniques.h
lib/: CMakeLists.txt
lib/src/: uniques.c
src/: CMakeLists.txt  maze_solver.c  maze_solver_functions.c
test/: CMakeLists.txt  test_maze_solver.c
